Fix deserialization